tests/compile-fail/size_unary_negation.ori
// Spec: 06-types.md ยง Size Type
// Unary negation (-) is not permitted on Size. It is a compile-time error.

#[compile_fail("cannot negate")]
@test_size_negation_error () -> void = run(
    let s = 100b,
    // This should fail to compile: Size cannot be negated
    let neg = -s,
    (),
)
